Footer postioning fix on mobile devices
Tried to fix footer positioning on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,9 @@ body {
 }
 
 footer {
+    left: 0;
     bottom: 0;
-    position: fixed;
-    
+    position: fixed; 
 }
 
 body h1 {
